data/all_generated_tests/raw_wast_tests/br_if_ImproperFunctionCallorReturnHandling_1803.wast
;; 4. **Test: Backward Loop Continuation with Indirect Function Call**    - **Description:** Implement a loop with a `br_if` that conditionally performs a backward jump. Inside the loop, include an indirect function call that modifies the stack state.    - **Constraint Check:** Validates that the backward jump correctly continues the loop without corrupting the function call return process or stack state.

(assert_invalid
  (module
    (type $t (func (param)))
    (table funcref (elem))
    (func $f (param i32)
      (loop (param i32)
        (i32.const 0)
        (i32.const 1)
        (call_indirect (type $t) (i32.const 0))
        (br_if 0 (i32.const 1))
      )
    )
  )
  "type mismatch"
)